--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -70,7 +70,7 @@
 				This plugin starts a Jetty server before the integration tests and stops it after the 
 				integration tests. It can also be used to start a jetty server from the command line for testing. 
 			-->
-			<plugin>
+			<!--<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.25</version>
@@ -94,12 +94,12 @@
 				</executions>
 				<dependencies>
 					<dependency>
-						<!-- 
+						&lt;!&ndash;
 							XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused 
 							by internal dependencies of Jetty, which use version 2.5, but have it packaged in a different 
 							group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
 							dependencies from commons-logging and commons-fileupload. 
-						-->
+						&ndash;&gt;
 						<groupId>javax.servlet</groupId>
 						<artifactId>servlet-api</artifactId>
 						<version>2.5</version>
@@ -112,7 +112,7 @@
 						<type>jar</type>
 					</dependency>
 				</dependencies>
-			</plugin>
+			</plugin>-->
 
             <!-- This plugin creates html from the documentation. -->
             <plugin>
