--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,8 @@
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 
         <!-- Spring -->
-        <spring-version>3.2.4.RELEASE</spring-version>
+        <spring-version>4.3.16.RELEASE</spring-version>
+        <spring-security-version>4.2.9.RELEASE</spring-security-version>
         <spring-security-oauth-version>3.19</spring-security-oauth-version>
 
         <!-- Serenity parameters -->
@@ -1460,11 +1461,11 @@
 
     <reporting>
         <plugins>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jxr-maven-plugin</artifactId>
                 <version>2.0-beta-1</version>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
