--- a/code/web/pom.xml
+++ b/code/web/pom.xml
@@ -35,7 +35,7 @@
 		<webapps>webapps</webapps>
 		<final.name>${project.build.finalName}.${project.packaging}</final.name>
 		<maven.build.timestamp.format>dd-MM-yyyy HH:mm:ss</maven.build.timestamp.format>
-        <jetty-version>7.6.15.v20140411</jetty-version>
+        <version>9.4.12.v20180830</version>
 	</properties>
 
 	<build>
